# captcha9kw

./: .gitchangelog.rc  .gitignore  CHANGELOG.rst  LICENSE  README.rst  TODO.rst  api_reference.rst  pyproject.toml  requirements.txt
captcha9kw/: __init__.py  captcha9kw.py
docs/: Makefile  requirements.txt
docs/source/: api_reference.rst  conf.py  index.rst
docs/source/_static/: custom.css
docs/source/_templates/: genindex.html  globaltoc.html
tests/: test_captcha9kw.py
