[tool.poetry]
name = "captcha9kw"
version = "0.2.0"
description = "A simple package for interacting with the 9kw.eu anti-captcha service."
authors = ["WereCatf <werecatf@outlook.com>"]
maintainers = ["WereCatf <werecatf@outlook.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/WereCatf/captcha9kw/"
repository = "https://github.com/WereCatf/captcha9kw/"
documentation = "https://captcha9kw.readthedocs.io/"
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
exclude = ["docs"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
filetype = "^1.0.8"
validators = "^0.18.2"
importlib-metadata = { version = "^1.0", python = "<3.8" }

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
Sphinx = "^4.3.0"
tomli = "^1.2.2"
cloud_sptheme = "^1.10.1"
gitchangelog = "^3.0.4"
sphinxcontrib-restbuilder = "^0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
